welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: ')' expected but integer literal found.
for (i <- to 3) { 
             ^Runner:7: error: illegal start of simple expression
	}
        ^