welcome.lessons.welcome.loopfor.LoopStairs.scala.code
for (i <- to 3) { 
	avance();
}
